--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -7,6 +7,7 @@
         <ul class="nav-menu">
             <li><a href="/dashboard"><i class="fas fa-home"></i> Dashboard</a></li>
             <li><a href="/devices"><i class="fas fa-microchip"></i> Dispositivos</a></li>
+            <li><a href="/calendar"><i class="fas fa-calendar-alt"></i> Calendario</a></li>
             {{#if user}}
                 {{#if (eq user.rol 'admin')}}
                 <li><a href="/admin"><i class="fas fa-user-shield"></i> Admin</a></li>
